[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Characters/Bear.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Characters/Amogus.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Characters/Chip.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Characters/Rex.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Characters/Sarge.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Blocks/Wood/WoodLong.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Blocks/Wood/WoodRectangle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Blocks/Wood/WoodSuperLong.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Blocks/Wood/WoodSquare.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Characters/Ninja.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Characters/PhysicsRabbitTest.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Slingshot.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/CameraController.gd" type="Script" id=14]
[ext_resource path="res://Scripts/CloseCamera.gd" type="Script" id=15]
[ext_resource path="res://Scripts/FarCamera.gd" type="Script" id=16]
[ext_resource path="res://Assets/tiles/grass_edge.png" type="Texture" id=17]
[ext_resource path="res://Assets/Backgrounds/Grassland.png" type="Texture" id=18]
[ext_resource path="res://Scenes/InterfaceController.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scripts/PolyGround.gd" type="Script" id=20]

[node name="Test2" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 532, -109 )
scale = Vector2( 0.5, 0.5 )
z_index = -10
texture = ExtResource( 18 )
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 2000 )

[node name="Slingshot" parent="." instance=ExtResource( 13 )]
MaxSlingshotPull = 150
MaxLaunchVelocity = 800

[node name="Cameras" type="Node2D" parent="." groups=["CameraController", "Cameras"]]
script = ExtResource( 14 )

[node name="CloseCamera" type="Camera2D" parent="Cameras" groups=["Camera", "CloseCamera"]]
position = Vector2( 145, -96 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 15 )

[node name="CloseTween" type="Tween" parent="Cameras/CloseCamera"]

[node name="CloseTweenZoom" type="Tween" parent="Cameras/CloseCamera"]

[node name="FarCamera" type="Camera2D" parent="Cameras" groups=["Camera", "FarCamera"]]
position = Vector2( 457, -134 )
zoom = Vector2( 1.5, 1.5 )
script = ExtResource( 16 )

[node name="FarTween" type="Tween" parent="Cameras/FarCamera"]

[node name="FarTweenZoom" type="Tween" parent="Cameras/FarCamera"]

[node name="Bricks" type="Node2D" parent="."]
position = Vector2( 910, -84 )

[node name="WoodSquare" parent="Bricks" instance=ExtResource( 10 )]
position = Vector2( -26, 39 )

[node name="WoodLong" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 113, 12 )

[node name="WoodRectangle" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( -143, 32 )

[node name="WoodSuperLong" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( -173, -102 )
rotation = 1.5708

[node name="WoodSquare2" parent="Bricks" instance=ExtResource( 10 )]
position = Vector2( -503, -231 )

[node name="WoodRectangle2" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( -504, 35 )

[node name="WoodSuperLong2" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( -506, -95 )
rotation = 1.5708

[node name="Rabbits" type="Node2D" parent="."]

[node name="Ninja" parent="Rabbits" instance=ExtResource( 11 )]
position = Vector2( -149, -9 )

[node name="Rex" parent="Rabbits" instance=ExtResource( 5 )]
position = Vector2( -284, -7 )

[node name="PhysicsRabbitTest3" parent="Rabbits" instance=ExtResource( 12 )]
position = Vector2( -411, -14 )

[node name="Amogus" parent="Rabbits" groups=["Player", "Rabbits"] instance=ExtResource( 3 )]
position = Vector2( -349, -18 )

[node name="Sarge" parent="Rabbits" instance=ExtResource( 6 )]
position = Vector2( -80, -9 )
catchphrase_text = "[wave] PEEPEE POOPOO !!"

[node name="Chip" parent="Rabbits" instance=ExtResource( 4 )]
position = Vector2( -228, -9 )

[node name="Bears" type="Node2D" parent="."]
position = Vector2( -53, -7 )

[node name="Bear" parent="Bears" instance=ExtResource( 2 )]
position = Vector2( 938, -189 )

[node name="Bear2" parent="Bears" instance=ExtResource( 2 )]
position = Vector2( 627, -102 )

[node name="Ground" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Ground"]
script = ExtResource( 20 )
fill = "res://Assets/tiles/grass_base.png"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground/StaticBody2D"]
position = Vector2( 0, 11 )
polygon = PoolVector2Array( 484, -8, 524, -88, 653, -89, 682, -9 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Ground/StaticBody2D"]
position = Vector2( 0, -28 )
polygon = PoolVector2Array( 112, 32, 256, 32, 256, -72, 112, -72 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Ground/StaticBody2D"]
polygon = PoolVector2Array( -448, 0, 1152, 0, 1152, 192, -448, 192 )

[node name="InterfaceController" parent="." instance=ExtResource( 19 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 392, 10 )
scale = Vector2( 0.05, 0.05 )
z_index = 2
texture = ExtResource( 17 )
region_enabled = true
region_rect = Rect2( 0, 0, 50000, 512 )

[connection signal="tween_completed" from="Cameras/CloseCamera/CloseTween" to="Cameras/CloseCamera" method="_on_CloseTween_tween_completed"]
[connection signal="tween_completed" from="Cameras/CloseCamera/CloseTweenZoom" to="Cameras/CloseCamera" method="_on_CloseTweenZoom_tween_completed"]
